# nanners-protocol

./: CMakeLists.txt  LICENSE  README.md
cmake/: nannersConfig.cmake.in  version.h.in
docs/: README.md  frame_layout.mmd  rx.mmd  tx.mmd
examples/: CMakeLists.txt  get_frame.c  send_frame.c
include/nanners/: enums.h  frame.h  getters.h  logs.h  nanners.h  putters.h  structs.h
src/: getters.c  logs.c  nanners.c  nanners_log.h  putters.c
tests/: CMakeLists.txt  test_crc_compute.c  test_virtual_uart.c
tests/install/: test_install.sh
tests/install/consumer/: CMakeLists.txt  main.c
